# provas

./: .gitignore  01_ocr_questions.py  02_clean_exam.py  04_export_json.py  README.md  cleanup.bat  pyproject.toml  requirements.txt  run_this.py
.github/workflows/: ci.yml
provas/fuvest2025/: exam.json  final_audit_summary.json  final_audit_summary.md  full.md  full_blocks_final.md  full_blocks_final_summary.md  full_blocks_fix_dedup.md  full_blocks_fix_dedup_summary.md  full_blocks_fix_missing.md  full_regex.md  full_with_descriptions.md  validation_report.txt
provas/ufpr_2024/: exam.json  final_audit.md  final_audit_summary.json  full.md  full_blocks.md  full_blocks_final.md  full_blocks_final_summary.md  full_blocks_fix_missing.md  full_regex.md  full_with_descriptions.md  validation_report.txt
provas/unicamp_2024/: exam.json  final_audit_summary.json  full.md  full_blocks.md  full_blocks_final.md  full_blocks_final_summary.md  full_blocks_fix_dedup_summary.md  full_blocks_fix_missing.md  full_blocks_fix_missing_summary.md  full_regex.md  full_with_descriptions.md  validation_report.txt
scr/provas/: cli.py  export_json.py  ocr.py
src/: azure_client.py  cli.py  llm_client.py
src/llm_client/: azure_client.py  llm_client.py
src/prova_principal/: block_fix_missing.py  blocks_summary.py  final_json.py  stp_01_blocks_fix_boundaries.py  stp_02_blocks_fix_dedup.py  stp_03_blocks_fix_missing.py  stp_04_blocks_fix_audit.py  stp_05_block_fix_llm.py  stp_06_blocks_final_json.py
src/provas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  (+1 more)
(+44 files in other folders)
