[project]
name = "provas"
version = "0.1.0"
description = "Pipeline to parse vestibular exams: OCR images, normalize markdown, and export validated JSON."
requires-python = ">=3.10"
authors = [{ name = "You" }]
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "black>=24",
  "ruff>=0.4.0",
  "isort>=5",
]

[project.scripts]
provas = "provas.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
