[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provas"
version = "0.1.0"
description = "Pipeline to parse vestibular exams: OCR images, normalize markdown, and export validated JSON."
requires-python = ">=3.10"
authors = [{ name = "Edgar" }]
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "python-dotenv>=1.0",
  "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "black>=24",
  "ruff>=0.4.0",
  "isort>=5",
]

[project.scripts]
provas = "cli:main"

# src/ layout
[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["src"]
